apps/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:18.6@sha256:74935e72241653ca55e0414067e6d8763aceb8a810eb51b452253ec3dcfc4336
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - keycloak
                - -d
                - keycloak
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.8.0@sha256:27b3230fbabb8c9ff3c66c864cf09dcd8a41aca82e5100679d109ef0eeb05741
          args:
            - start
          ports:
            - containerPort: 8080
            - containerPort: 9000
          startupProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/crypt/keycloak/postgres
            type: DirectoryOrCreate
