apps/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Keycloak
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: keycloak.png
    gethomepage.dev/pod-selector: app=keycloak
spec:
  rules:
    - host: auth.khazadum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
